Fix spacing beneath name.

--- a/styles/certificate.css
+++ b/styles/certificate.css
@@ -55,8 +55,7 @@ h1 {
     font-family: 'Tangerine', cursive;
     font-weight: bold;
     font-size: 4rem;
-    padding-bottom: 0.3em;
-    margin-bottom: 0.3em;
+    padding-bottom: 0.2rem;
     border-bottom: 1px solid black;
 }
 
